--- a/core/src/main/res/values-fr/core_text.xml
+++ b/core/src/main/res/values-fr/core_text.xml
@@ -157,6 +157,7 @@
     <string name="version">Version</string>
     <string name="last_auto_refresh">Dernier actualisation automatique</string>
     <string name="host">Serveur</string>
+    <string name="config_version">Version des configurations</string>
     <string name="google_services_id">ID des services Google</string>
     <string name="in_app_messages_id">"ID de l'application"</string>
     <string name="open_time_label">de</string>
