--- a/admin/src/main/res/layout/activity_profile.xml
+++ b/admin/src/main/res/layout/activity_profile.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     >
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -105,9 +105,9 @@
                             android:layout_gravity="right|bottom"
                             android:layout_marginEnd="@dimen/tiny"
                             android:layout_marginBottom="2dp"
+                            app:controller_name="@{activity.namespace + `_edit_phone`}"
                             app:icon="@drawable/ic_baseline_edit_24"
                             app:on_click="@{activity::openPhoneForm}"
-                            app:controller_name="@{activity.namespace + `_edit_phone`}"
                             tools:ignore="RtlHardcoded"
                             />
                     </FrameLayout>
@@ -157,9 +157,9 @@
                         android:layout_marginTop="@dimen/large"
                         android:minWidth="@dimen/large_button_width"
                         android:text="@string/save"
+                        app:controller_name="@{activity.namespace + `_submit`}"
                         app:icon="@drawable/ic_baseline_check_24"
                         app:on_click="@{v -> activity.submit()}"
-                        app:controller_name="@{activity.namespace + `_submit`}"
                         />
 
                     <Button
@@ -170,9 +170,9 @@
                         android:layout_marginBottom="@dimen/large"
                         android:minWidth="@dimen/large_button_width"
                         android:text="@string/back"
+                        app:controller_name="@{activity.namespace + `_back`}"
                         app:icon="@drawable/ic_baseline_arrow_back_24"
                         app:on_click="@{v -> activity.finish()}"
-                        app:controller_name="@{activity.namespace + `_back`}"
                         />
 
                     <!--suppress AndroidElementNotAllowed -->
