--- a/admin/src/main/res/layout/activity_profile.xml
+++ b/admin/src/main/res/layout/activity_profile.xml
@@ -83,8 +83,10 @@
                             style="@style/Widget.App.TextInputLayout"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textDirection="ltr"
                             android:layoutDirection="ltr"
+                            android:paddingEnd="@dimen/huge"
+                            android:textDirection="ltr"
+                            tools:ignore="RtlSymmetry"
                             >
 
                             <com.google.android.material.textfield.TextInputEditText
@@ -93,6 +95,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:enabled="false"
+                                android:gravity="center"
                                 android:hint="@string/phone_number"
                                 android:text="@{activity.principalPhone}"
                                 />
