update build tools version and add app check

--- a/core/src/main/res/values-ar/core_text.xml
+++ b/core/src/main/res/values-ar/core_text.xml
@@ -58,7 +58,7 @@
     <string name="settings">الإعدادات</string>
     <string name="help">مساعدة</string>
     <string name="privacy_policy">سياسة الخصوصية</string>
-    <string name="about_us">معلومات عنا</string>
+    <string name="about_us">حول التطبيق</string>
     <string name="submit">حسنا</string>
     <string name="auto">تلقائي</string>
     <string name="feedback">إتصل بنا</string>
