add failed sms warning

--- a/core/src/main/res/values-fr/core_text.xml
+++ b/core/src/main/res/values-fr/core_text.xml
@@ -294,4 +294,5 @@
     <string name="sent_messages_count">SMS envoyés</string>
     <string name="by_updater">(par&#160;%s)</string>
     <string name="press_back_again">press \"back\" again to exit</string>
+    <string name="sms_sending_failed">"L'envoi de SMS a échoué"</string>
 </resources>
