--- a/core/src/main/res/values-ar/core_text.xml
+++ b/core/src/main/res/values-ar/core_text.xml
@@ -294,4 +294,5 @@
     <string name="sent_messages_count">الرسائل المرسلة</string>
     <string name="by_updater">(بواسطة&#160;%s)</string>
     <string name="press_back_again">إضغط على \"رجوع\" مرة أخرى للخروج</string>
+    <string name="sms_sending_failed">فشل إرسال رسالة قصيرة</string>
 </resources>
