--- a/core/src/main/res/values-ar/core_text.xml
+++ b/core/src/main/res/values-ar/core_text.xml
@@ -131,7 +131,7 @@
     <string name="activation_state">حالة التفعيل</string>
     <string name="not_activated_yet">لم يتم تفعيل التطبيق بعد</string>
     <string name="activated_at">التطبيق مفعل منذ</string>
-    <string name="activation_code_label">%1$s (%2$02d&#160;يوما)</string>
+    <string name="activation_code_label">%1$s#%2$05d</string>
     <string name="activation_expired_since">انتهت صلاحية التفعيل منذ: %s</string>
     <string name="activated_until">التطبيق مفعل حتى: %s</string>
     <string name="name_invalid">هذا الإسم غير صالح، استخدم الحروف اللاتينية والأرقام فقط</string>
