--- a/core/src/main/res/values/core_text.xml
+++ b/core/src/main/res/values/core_text.xml
@@ -138,7 +138,7 @@
     <string name="activation_state">Activation State</string>
     <string name="not_activated_yet">Not activated yet</string>
     <string name="activated_at">activated at</string>
-    <string name="activation_code_label">%1$s (%2$02d&#160;days)</string>
+    <string name="activation_code_label">%1$s#%2$05d</string>
     <string name="activation_expired_since">Activation expired since: %s</string>
     <string name="activated_until">Activated until %s</string>
     <string name="name_invalid">Invalid name, use only alphabets and numbers</string>
