--- a/core/src/main/res/values/text_appearance_styles.xml
+++ b/core/src/main/res/values/text_appearance_styles.xml
@@ -54,7 +54,7 @@
     </style>
 
     <style name="TextAppearance.Jsoftware95.Clock" parent="TextAppearance.Jsoftware95.Headline5">
-        <item name="android:textColor">?colorPrimary</item>
+        <item name="android:textColor">@color/clock_color</item>
         <item name="android:textSize">@dimen/text_size_headline4</item>
     </style>
 
